resize problem fixed; drop down list alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,11 @@ article.name {
     display: flex;
 }
 
+input[placeholder="Vorname"],
+input[placeholder="Nachname"] {
+    width: 50%;
+}
+
 input[type="email"] {
     width: 100%
 }
@@ -56,13 +61,14 @@ textarea {
 
 input[type="text"]:focus,
 input[type="email"]:focus {
-    outline: 2px solid #4895A2;
-    border: none;
-    padding: 0.5vh 0.5vw;
+    border: 2px solid #4895A2;
+    /* border: none; */
+    /* padding: 0.5vh 0.5vw; */
 }
 
 select {
     display: flex;
+    margin: 0.2vh 0.2vw;
     padding: 1vh 1vw;
     border: 2px solid lightgray;
     border-radius: 4px;
